set name and id

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -14,5 +14,10 @@
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; style-src 'self' 'unsafe-inline'"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{C6611B69-E123-4948-9452-46943341BD60}"
+    }
   }
 }
