--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "action": {
-    "default_title": "Svelte Extension",
+    "default_title": "LeetCode Hints",
     "default_icon": "logo.png",
     "default_popup": "index.html"
   },
